--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "npm": "1.4.x"
   },
   "dependencies": {
-    "body-parser": "~1.8.1",
+    "express": "~4.9.0",
+    "morgan": "~1.3.0",
     "cookie-parser": "~1.3.3",
+    "body-parser": "~1.8.1",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
-    "express": "~4.9.0",
     "express-partials": "^0.3.0",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3"
+    "sequelize": "^2.1.0",
+    "serve-favicon": "~2.1.3",
+    "sqlite3": "^3.0.7"
   }
 }
