--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "node": "0.10.x",
     "npm": "1.4.x"
   },
+  "devDependencies": {
+    "sqlite3": "^3.0.7"
+  },
   "dependencies": {
-    "express": "~4.9.0",
-    "morgan": "~1.3.0",
-    "cookie-parser": "~1.3.3",
     "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
+    "express": "~4.9.0",
     "express-partials": "^0.3.0",
+    "morgan": "~1.3.0",
+    "pg": "^4.3.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^2.1.0",
-    "serve-favicon": "~2.1.3",
-    "sqlite3": "^3.0.7"
+    "serve-favicon": "~2.1.3"
   }
 }
