--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "npm": "1.4.x"
   },
   "devDependencies": {
-    "sqlite3": "^3.0.7"
+    "sqlite3": "^3.0.4"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -20,9 +20,9 @@
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
     "morgan": "~1.3.0",
-    "pg": "^4.3.0",
+    "pg": "^4.1.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^2.1.0",
+    "sequelize": "^2.0.0-rc4",
     "serve-favicon": "~2.1.3"
   }
 }
