--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
-    "express-session" : "~1.0.3",
-    "method-override" : "^2.3.1",
+    "express-session": "~1.0.3",
+    "https": "^1.0.0",
+    "method-override": "^2.3.1",
     "morgan": "~1.3.0",
     "pg": "^4.1.1",
     "pg-hstore": "^2.3.2",
